feedback form input

--- a/Components/LoggedIn.css
+++ b/Components/LoggedIn.css
@@ -2,12 +2,16 @@
 	display: none;
 
 }
+#pageContent{
+	overflow: auto;
+}
 
 
 @media screen and (max-width: 768px){
 	
 	#pageContent{
 		width: 100%;
+
 	}
 
 	.hideBar{
