--- a/Components/Pages/CareerPage/CareerPage.css
+++ b/Components/Pages/CareerPage/CareerPage.css
@@ -8,23 +8,70 @@
 }
 
 
-#div1 { 
+#bioDiv{ 
+	width: 100%;
 	background: #DDD; 
 	float: left;
 }
 #div2 {
 	background: #8b8b8b; 
-	width: 50%;
-	height: 50%;
-	float: left;
+	
 }
 #div3 {
 	background: #343333; 
-	width: 50%;
-	height: 50%;
-	float: left;
+	
 
 }
 body{
 	background-color: transparent;
 }
+#bioTitle{
+	background-color: red;
+    z-index: 1;
+    /* width: 100%; */
+    padding: 10px;
+    /* margin: 50px; */
+    color: white;
+    margin-left:0;
+    margin-top: 0px; 
+    margin-bottom: 0px; 
+
+}
+#careerAquirements{
+
+}
+.careerBullets{
+	color: grey;
+    margin-left: 40px;
+    font-size: 16px;
+    font-family: helvetica;
+    margin-right: 40px;
+}
+
+#aquirementsTitle{
+	 margin-left: 40px;
+    font-family: helvetica;
+
+}
+#bioForm{
+	width: 100%;
+}
+.bioButton{
+	background-color: red;
+    font-size: 21px;
+    font-family: helvetica;
+    padding: 10px;
+    padding-top: 10px;
+    padding-right: 12px;
+    padding-bottom: 10px;
+    padding-left: 12px;
+    float: right;
+
+}
+
+
+
+
+
+
+
