--- a/Components/Pages/FeedbackPage/FeedbackPage.css
+++ b/Components/Pages/FeedbackPage/FeedbackPage.css
@@ -21,6 +21,8 @@
 	text-align: center;
 	font-family: 'Roboto Condensed', sans-serif;
 	display: inline-block;
+	color:black;
+	margin-left: 10%;
 
 
 }
@@ -48,19 +50,18 @@ label{
 	margin-left: 10%;
 
 }
-h1{
-	color:black;
-	margin-left: 10%;
 
-}
-h2{
+.questionText{
 	color:#343333;
 	margin-left: 3%;
 }
-h3{
+.rightSide{
 	margin-left: 6%;
 }
-  input[type=radio] {
+.leftSide{
+
+}
+.radioButt[type=radio] {
     border: 0px;
     width: 75%;
     height: 1.5em;
@@ -114,6 +115,7 @@ h3{
 		font-size: 20px;
 		margin-left: 8%;
 		margin-right: 6%;
+		color:black;
 
 	}
 	.radio-inline{
