--- a/Components/Pages/FeedbackPage/FeedbackPage.css
+++ b/Components/Pages/FeedbackPage/FeedbackPage.css
@@ -14,6 +14,7 @@
 	background-size: 100% auto;
 	background-size: cover;
     background-position: 50% 50%;
+
 }
 
 .studentFeedback{
@@ -122,9 +123,17 @@ label{
 		padding-left: 15px;
 	}
 	.rightSide{
-		margin-left: 65%;
-		
+		margin-left: 70%;
+		margin-bottom: -3%;	
 	}
+	.leftSide{
+		margin-left: 10%;
+		margin-top: -4%;
+	}
+
+	.multRads{
+	margin-left: 25%;
+}
 
 	
 	
