--- a/Components/Pages/FeedbackPage/FeedbackPage.css
+++ b/Components/Pages/FeedbackPage/FeedbackPage.css
@@ -14,6 +14,7 @@
 	background-size: 100% auto;
 	background-size: cover;
     background-position: 50% 50%;
+
 }
 
 .studentFeedback{
@@ -21,6 +22,8 @@
 	text-align: center;
 	font-family: 'Roboto Condensed', sans-serif;
 	display: inline-block;
+	color:black;
+	margin-left: 10%;
 
 
 }
@@ -35,12 +38,14 @@
 	margin-top: -20%;
 }
 #exampleSelect1{
-	width:70%;
-	margin-left: 20%;
+	width:90%;
+	margin-left: 10%;
+	
 }
 #exampleSelect2{
-	width:0%;
-	margin-left: 20%;
+	width:90%;
+
+	
 }
 label{
 	font-size: 150%;
@@ -48,24 +53,28 @@ label{
 	margin-left: 10%;
 
 }
-h1{
-	color:black;
-	margin-left: 10%;
 
+.rightSide{
+	margin-right: 6%;
+	font-size: 20px;
+	text-align: right;
+	
 }
-h2{
-	color:#343333;
-	margin-left: 3%;
-}
-h3{
+.leftSide{
+	font-size: 20px;
+	float:left;
+	margin-top: 1%;
 	margin-left: 6%;
-}
-  input[type=radio] {
-    border: 0px;
-    width: 75%;
-    height: 1.5em;
+
 
 }
+input[type=radio] {
+    border: 0px;
+    width: 50%;
+    height: 1.3em;
+    margin-right: 20px;
+}
+
 #feedbackInputQuestion{
 	color: black;
 	font-size: 210%;
@@ -73,20 +82,51 @@ h3{
 
 }
 #usr{
-	width:80%;
+	width:90%;
+	margin-left: -3%;
 }
 .radio-inline{
 	color:black;
-
-
+	padding-left: 5%;
+}
+#resetButt{
+	width:20%;
+	background-color: gray;
 
 }
+
+.btn.btn-default{
+	width:20%;
+	background-color: #FF0000;
+	
+}
+.questionTextRad{
+		margin-left: 3%;
+	}
+
 #inputQuesText{
-	color:black;
-	margin-left: 5%;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 28px;
+	margin-left: -5%;
+	margin-top: 2%;
+	margin-bottom: 1%;
+}
+.multRads{
+	margin-left: 18%;
+	margin-top: 1%;
+
+}
+.commentText{
+	font-size: 28px;
+	margin-left: 4%;
+}
+#comment{
+	margin-left: 3%;
+	margin-right: 15%;
 }
 
+
+
+/*======================iPhone*/
 
 
 @media screen and (max-width: 640px){
@@ -110,23 +150,112 @@ h3{
 	#exampleSelectText2{
 		margin-left: 3%;
 	}
-	.questionTextRad{
-		font-size: 20px;
-		margin-left: 8%;
-		margin-right: 6%;
-
-	}
+	
 	.radio-inline{
-		padding-left: 15px;
+		padding-left: 25px;
 	}
 	.rightSide{
-		margin-left: 65%;
-		
+		float:right;
+		text-align: right;
+		margin-top: -4%;
+
+	}
+	.leftSide{
+		margin-left: 10%;
+		margin-top: -8%;
 	}
 
+	.multRads{
+	margin-left: 25%;
+	}
+
+	#usr{
+		margin-left: 5%;
+		width: 90%;
+	}
 	
+	#exampleSelectText1, #exampleSelectText2{
+		margin-left: 10%;
+	}
+	#comment{
+		margin-left: 3%;
+		margin-right: 7%;
 	
+	}
+	.commentText{
+		margin-left: 4%;
+		font-size: 22px;
+	}
+	#questionTextRad{
+	color:black;
+	margin-left: 8%;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 10px;
 }
+	#inputQuesText {
+	color:black;
+	margin-left: 3%;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 30px;
+	margin-right: 5%;
+}
+	.btn.btn-default{
+		margin-left: 20%;
+	}
+
+}
+/*================================iPad*/
+
+@media screen and (max-width: 960px){
+	.rightSide{
+		float:right;
+		margin-right: 15%;
+		margin-top: -3%;
+		text-align: right;
+	}
+	.leftSide{
+		float:left;
+		margin-top: 1%;
+	}
+	#exampleSelect1, #exampleSelect2{
+		width:80%;
+		margin-left: 10%;
+		margin-top: 2%;
+	}
+	
+	
+	.multRads{
+		margin-left: 20%;
+	}
+	.radio-inline{
+	color:black;
+	padding-left: 4%;
+	}
+
+	#usr{
+		width:90%;
+		margin-left: 3%;
+	}
+	.questionTextRad{
+		color:black;
+		margin-left: 5%;
+		font-size: 22px;
+		margin-right: 5%;
+	}
+	#inputQuesText{
+		font-size: 22px;
+		margin-left: 2%;
+	}
+	#commentText{
+		margin-left: 2%;
+	}
+
+}
+
+
+
+
+
 
 
 
