--- a/Components/MenuButtons/MenuButtons.css
+++ b/Components/MenuButtons/MenuButtons.css
@@ -1,3 +1,11 @@
 .nav-pills>li.active>a{
-	background-color: red;
+	background-color: #DE0303;
+	pointer-events: none;
+	padding-left: -5%;
+
 }
+a{
+	color:black;
+	font-size: 20px;
+}
+
