clear user data on logout, modified table component to now have custom columns for every page, added list of users to admin page

--- a/Components/Pages/AdminPage/AdminPage.css
+++ b/Components/Pages/AdminPage/AdminPage.css
@@ -1,3 +1,22 @@
 #userFormDiv {
 	color: black;
 }
+.adminPageCol1{
+	width:20%;
+}
+
+.adminPageCol2{
+	width:20%;
+}
+
+.adminPageCol3{
+	width:20%;
+}
+
+.adminPageCol4{
+	width:20%;
+}
+
+.adminPageCol5{
+	width:20%;
+}
