--- a/Components/Pages/AbsenceRequestPage/AbsenceRequestPage.css
+++ b/Components/Pages/AbsenceRequestPage/AbsenceRequestPage.css
@@ -4,3 +4,47 @@ h1{
 .instructor{
 	color: black;
 }
+
+.radio-inline{
+	padding-left:5%;
+	margin-right: 5%;
+}
+#resetButtAbs{
+	background-color: gray;
+	font-size: 18px;
+}
+#submitAbs{
+	font-size: 18px;
+}
+
+
+
+@media screen and (max-width: 640px){
+
+	.sel1{
+	margin-left: 7%;
+	}
+	
+}
+
+
+@media screen and (max-width: 960px){
+	.sel1{
+		margin-left: 7%;
+	}
+	#resetButtAbs{
+		margin-left: 5%;
+		font-size: 22px;
+	}
+	#submitAbs{
+		font-size: 22px;
+	}
+
+	
+
+
+
+
+
+
+}
