--- a/Components/Pages/FeedbackPage/FeedbackPage.css
+++ b/Components/Pages/FeedbackPage/FeedbackPage.css
@@ -72,7 +72,7 @@ input[type=radio] {
     border: 0px;
     width: 50%;
     height: 1.3em;
-    margin-right: 20px;
+   /* margin-right: 20px;*/
 }
 
 #feedbackInputQuestion{
@@ -85,10 +85,10 @@ input[type=radio] {
 	width:90%;
 	margin-left: -3%;
 }
-.radio-inline{
+.radio-inline.radioButt{
 	color:black;
-	padding-left: 5%;
-}
+	margin:1%;
+	}
 #resetButt{
 	width:20%;
 	background-color: gray;
@@ -123,6 +123,14 @@ input[type=radio] {
 	margin-left: 3%;
 	margin-right: 15%;
 }
+#resetButt{
+	background-color: gray;
+	font-size: 18px;
+	margin-left: 3%;
+}
+#submitButt{
+	font-size: 18px;
+}
 
 
 
@@ -151,23 +159,19 @@ input[type=radio] {
 		margin-left: 3%;
 	}
 	
-	.radio-inline{
-		padding-left: 25px;
-	}
+	
 	.rightSide{
 		float:right;
 		text-align: right;
-		margin-top: -4%;
+		margin-top: -8%;
 
 	}
 	.leftSide{
-		margin-left: 10%;
-		margin-top: -8%;
+		float:left;
+		margin-top: -10%;
 	}
 
-	.multRads{
-	margin-left: 25%;
-	}
+	
 
 	#usr{
 		margin-left: 5%;
@@ -246,8 +250,9 @@ input[type=radio] {
 		font-size: 22px;
 		margin-left: 2%;
 	}
-	#commentText{
+	.commentText{
 		margin-left: 2%;
+		font-size: 22px;
 	}
 
 }
