--- a/Components/Pages/AbsenceRequestPage/AbsenceRequestPage.css
+++ b/Components/Pages/AbsenceRequestPage/AbsenceRequestPage.css
@@ -5,40 +5,40 @@ h1{
 	color: black;
 }
 
-.radio-inline{
-	padding-left:5%;
-	margin-right: 5%;
-}
+
 #resetButtAbs{
 	background-color: gray;
 	font-size: 18px;
+	margin-left: 11%;
+	font-size: 22px;
 }
 #submitAbs{
-	font-size: 18px;
-}
+	font-size: 22px;
 
+}
 #sel1{
-	width:87%;
-	margin-left: 7%;
+	margin-left: 12%;
+	width:76%;
 }
-
-
+.sel1{
+	margin-left: 12%;
+}
 
 @media screen and (max-width: 640px){
-
 	#sel1{
-	margin-left: 7%;
-	width: 90%;
+		margin-left: 1%;
+		width:90%;
 	}
+	.sel1{
+		margin-left: 7%;
+	}
+
 	
 }
 
 
 @media screen and (max-width: 960px){
-	#sel1{
-		margin-left: 7%;
-		width:80%;
-	}
+	
 	#resetButtAbs{
 		margin-left: 5%;
 		font-size: 22px;
@@ -46,12 +46,13 @@ h1{
 	#submitAbs{
 		font-size: 22px;
 	}
+	#sel1{
+		margin-left: 8%;
+		width:84%;
+	}
+	.sel1{
+		margin-left: 8%;
+	}
 
 	
-
-
-
-
-
-
 }
