--- a/Components/Pages/HomePage/HomePage.css
+++ b/Components/Pages/HomePage/HomePage.css
@@ -4,15 +4,17 @@
 	padding-top: 6%;
     padding-right: 4%;
     padding-left: 4%;
+    
 	
 }
 #HomePage_login{
 	z-index: 1; 
 	position: absolute; 
-	padding-top: 7%;
+	padding-top: 6%;
     padding-right:5%;
     padding-left: 7%;
 	right: 0px;
+	max-width: 100%;
 
 }
 
@@ -41,7 +43,8 @@
     padding-right: 3%;
     padding-bottom: 12%;
     padding-left: 3%;
-    left: 0px; 
+    left: 0px;
+    max-width: 54%; 
 	}
 
 	/*What element does this style? -nlp*/
