--- a/Components/Pages/AbsenceRequestPage/AbsenceRequestPage.css
+++ b/Components/Pages/AbsenceRequestPage/AbsenceRequestPage.css
@@ -17,24 +17,24 @@ h1{
 
 }
 #sel1{
-	margin-left: 12%;
-	width:76%;
+	margin-left: 8%;
+	width:84%;
 }
 .sel1{
-	margin-left: 12%;
-}
-
-@media screen and (max-width: 640px){
-	#sel1{
-		margin-left: 1%;
-		width:90%;
-	}
-	.sel1{
-		margin-left: 7%;
-	}
-
+	margin-left: 8%;
+	color: black;
+	font-size: 22px;
 	
 }
+#AbsQuest{
+	color: black;
+	font-size: 22px;
+
+}
+#submitAbs{
+		background-color: #FF0000;
+	}
+
 
 
 @media screen and (max-width: 960px){
@@ -43,6 +43,7 @@ h1{
 		margin-left: 5%;
 		font-size: 22px;
 	}
+
 	#submitAbs{
 		font-size: 22px;
 	}
@@ -52,6 +53,42 @@ h1{
 	}
 	.sel1{
 		margin-left: 8%;
+		font-size: 20px;
+	}
+	.absenceInput{
+		margin-left: 4%;
+		width:92%;
+	}
+	#AbsQuest{
+		color: black;
+		font-size: 20px;
+		margin-left: 4%;
+	}
+	#submitAbs{
+		background-color: #FF0000;
+	}
+
+	
+}
+
+@media screen and (max-width: 640px){
+	#sel1{
+		margin-left: 7%;
+		width:86%;
+	}
+	.sel1{
+		margin-left: 7%;
+		color:black;
+		font-size:22px; 
+	}
+	#AbsQuest{
+		font-size: 21px;
+	}
+	#submitAbs{
+		background-color:#FF0000;
+	}
+	.absenceInput{
+		margin-left: 5%;
 	}
 
 	
