--- a/Components/Pages/TutorRequestPage/TutorRequestPage.css
+++ b/Components/Pages/TutorRequestPage/TutorRequestPage.css
@@ -23,80 +23,6 @@
 }
 
 
-/*======================iPhone*/
-
-
-@media screen and (max-width: 640px){
-	.tutorInput{
-		width:90%;
-		margin-left: 4%;	
-	}
-	.tutTxt{
-		margin-left: 5%;
-	}
-	#cohDropdown{
-		margin-left: 6%;
-		width: 86%;
-	}
-	.cohortSel{
-		margin-left: 6%;
-	}
-	#weekDropdown{
-		margin-left: 6%;
-		width:86%;
-	}
-	.weekSel{
-		margin-left: 6%;
-	
-	}
-	.quesTut{
-		font-size:22px;
-		margin-left: 7%;
-	}
-	.leftSideTut{
-		font-size: 17px;
-		float:left;
-		margin-left: 7%;
-		margin-top: 1%;
-	}
-	.rightSideTut{
-		font-size:17px;
-		float:right;
-		margin-right: 15%;
-		margin-top: -4%;
-		width: 35px;
-	}
-	.radioButtTut2{
-		width: 35px;
-		color:black;
-		display: inline-block;
-		margin-left: 12%;
-
-	}
-	.radioButtTut3{
-		width:35px;
-
-	}
-
-	.lastQ{
-		font-size: 22px;
-		margin-left: 7%;
-		padding-bottom: 3%;
-	}
-	.lastQInput{
-		margin-left: 7%;
-		width:85%;
-		margin-bottom: 5%;
-	}
-	.tutComment{
-		margin-left: 4%;
-	}
-	#commentSpace{
-		margin-left: 4%;
-		width:93%;
-	}
-
-}
 
 /*================================iPad*/
 
@@ -126,6 +52,108 @@
 	}
 
 
+/*======================iPhone*/
+
+
+@media screen and (max-width: 640px){
+	.tutorInput{
+		width:90%;
+		margin-left: 4%;	
+	}
+	.tutTxt{
+		margin-left: 5%;
+	}
+	#cohDropdown{
+		margin-left: 6%;
+		width: 86%;
+	}
+	.cohortSel{
+		margin-left: 6%;
+	}
+	#weekDropdown{
+		margin-left: 6%;
+		width:86%;
+	}
+	.weekSel{
+		margin-left: 6%;
+	
+	}
+	.quesTut{
+		font-size:22px;
+		margin-left: 7%;
+		color: black;
+	}
+	.leftSideTut{
+		font-size: 17px;
+		float:left;
+		margin-left: 7%;
+		margin-top: 1%;
+	}
+	.rightSideTut{
+		font-size:17px;
+		float:right;
+		margin-right: 15%;
+		margin-top: -4%;
+		width: 35px;
+	}
+	.radioButtTut2{
+		width: 35px;
+		color:black;
+		display: inline-block;
+		margin-left: 12%;
+
+	}
+	.radioButtTut3{
+		margin-left: 11%;
+		color:black;
+		font-size: 20px;
+
+	}
+
+	.lastQ{
+		font-size: 22px;
+		margin-left: 7%;
+		padding-bottom: 3%;
+	}
+	.lastQInput{
+		margin-left: 7%;
+		width:85%;
+		margin-bottom: 5%;
+	}
+	.tutComment{
+		margin-left: 4%;
+	}
+	#commentSpace{
+		margin-left: 4%;
+		width:93%;
+	}
+	input[type=radio] {
+		width:20px;
+		margin-left: -24px;
+	}
+	#submitTut{
+		background-color: red;
+	}
+	.tutComment{
+		color: black;
+	}
+	.radioButtTut2{
+		
+		font-size: 19px;
+	}
+	.radioButtTut{
+		width:3.3em;
+	}
+	#bubble{
+
+	}
+	.multRads3{
+		margin-left: 26%;
+	}
+
+
+
+}
 
 
 
