--- a/Components/Pages/CareerPage/CareerPage.css
+++ b/Components/Pages/CareerPage/CareerPage.css
@@ -115,8 +115,6 @@ body{
 	background-color: #e6e5e5;
 	border: 1px solid #fff;
     border-radius: 1px;
-
-
 }
 #careerUrlDiv{
     display: inline-flex;
@@ -141,8 +139,12 @@ body{
     width: 100%;
 }
 
+@media screen and (max-width: 1200px){
+    #profileImage{
+        width: initial;
 
-
+    }
+}
 
 
 
