--- a/Components/Pages/FeedbackPage/FeedbackPage.css
+++ b/Components/Pages/FeedbackPage/FeedbackPage.css
@@ -95,11 +95,11 @@ input[type=radio] {
 
 }
 
-.btn.btn-default{
+/*.btn.btn-default{
 	width:20%;
 	background-color: #FF0000;
 	
-}
+}*/
 .questionTextRad{
 		margin-left: 3%;
 		font-size: 22px;
