--- a/Components/Pages/AdminPage/createUserForm/createUserForm.css
+++ b/Components/Pages/AdminPage/createUserForm/createUserForm.css
@@ -1,6 +1,7 @@
 #adminButton{
 	width: 100%;
 	color: white;
+	background-color: red;
 }
 
 .formTitle{
@@ -11,14 +12,19 @@
 }
 
 .createUser{
-	background-color: #e4e3e3;
-    margin-top: 20px;
-    margin-bottom: 4px;
+    margin-top: 17px;
+    margin-bottom: 10px;
     padding-top: 20px;
     padding-right: 52px;
-    padding-bottom: 20px;
+    padding-bottom: 92px;
     padding-left: 52px;
+    background-color: #e4e3e3;
 }
 .colorBlock{
 	margin-bottom: 42px;
+}
+
+.createUserDiv{
+	background-color: #e4e3e3;
+    margin-top: 34px;
 }
