--- a/Components/Pages/HomeworkPage/CreateAssignment/CreateAssignment.css
+++ b/Components/Pages/HomeworkPage/CreateAssignment/CreateAssignment.css
@@ -1,8 +1,15 @@
 #homeworkButton{
 	width: 100%;
     color: white;
+    background-color: red;
 }
 
 .homeworkAssignDiv{
 	padding: 56px;
+    padding-top: 25px;
+    padding-right: 56px;
+    padding-bottom: 25px;
+    padding-left: 56px;
+    background-color: #e4e3e3;
+    margin-bottom: 31px;
 }
