--- a/Components/AbsenceRadialQuest/AbsenceRadialQuest.css
+++ b/Components/AbsenceRadialQuest/AbsenceRadialQuest.css
@@ -23,22 +23,6 @@
 		
 	}
 
-
-@media screen and (max-width: 640px){
-
-	.absRadQ{
-		margin-left: 8%;
-		font-size: 22px;
-		margin-right: 2%;
-
-	}
-	.multRads2{
-		margin-bottom: 3%;
-	}
-
-
-}
-
 @media screen and (max-width: 960px){
 	.absRadQ{
 		font-size: 22px;
@@ -59,5 +43,39 @@
 		margin-bottom: 3%;
 	}
 
+
+}
+
+@media screen and (max-width: 640px){
+
+	.absRadQ{
+		margin-left: 9%;
+		font-size: 13px;
+		margin-right: 2%;
+
+	}
+	.multRads2{
+		margin-bottom: 3%;
+		margin-left: 9%;
+	}
+	#AbsQuest{
+		margin-left: 6%;
+	}
+	#sel1{
+		margin-left: 9%;
+		width:82%;
+	}
+	.absenceInput{
+		width:89%;
+	}
+	.sel1{
+		margin-left: 9%;
+	}
+	#resetButtAbs{
+		font-size: 13px;
+	}
+	#submitAbs{
+		font-size: 13px;
+	}
 
 }
