--- a/Components/Pages/FeedbackPage/FeedbackPage.css
+++ b/Components/Pages/FeedbackPage/FeedbackPage.css
@@ -106,7 +106,7 @@ input[type=radio] {
 
 #inputQuesText{
 	font-size: 21px;
-	margin-left: -5%;
+	margin-left: -2%;
 	margin-top: 2%;
 	margin-bottom: 1%;
 	color: black;
@@ -135,13 +135,20 @@ input[type=radio] {
 }
 #exampleSelectText1{
 	color:black;
-	font-size:22px; 
+	font-size:18px; 
 	margin-left: 10%; 
 }
 #exampleSelectText2{
 	color:black;
-	font-size:22px; 
+	font-size:18px; 
 
+}
+.questionTextRad{
+	margin-left: 5%;
+	font-size: 20px;
+}
+#submitButt{
+	background-color: red;
 }
 
 
@@ -192,7 +199,7 @@ input[type=radio] {
 	}
 	#inputQuesText{
 		font-size: 22px;
-		margin-left: 2%;
+		margin-left: -1%;
 		color:black;
 	}
 	.commentText{
@@ -202,6 +209,9 @@ input[type=radio] {
 	}
 	#comment{
 		width:90%;
+	}
+	#submitButt{
+		background-color: red;
 	}
 }
 
@@ -225,19 +235,21 @@ input[type=radio] {
 	}
 	#exampleSelectText1{
 		margin-left: 3%;
+		font-size: 18px;
 	}
 	#exampleSelect2{
 		width:90%;
 		margin-left: 4%;
 	}
 	#exampleSelectText2{
-		margin-left: 3%;
+		margin-left: 2%;
+		font-size: 18px;
 	}
 	
 	
 	.rightSide{
 		float:right;
-		text-align: right;
+		margin-right: 9%;
 		margin-top: -4%;
 		font-size: 17px;
 
@@ -246,6 +258,7 @@ input[type=radio] {
 		float:left;
 		margin-top: 1%;
 		font-size: 17px;
+		margin-left: 7%;
 	}
 
 	
@@ -255,37 +268,38 @@ input[type=radio] {
 		width: 90%;
 	}
 	
-	#exampleSelectText1, #exampleSelectText2{
-		margin-left: 10%;
-		font-size: 20px;
-	}
+
 	#comment{
 		margin-left: 2%;
 		width: 93%;
 	
 	}
 	.commentText{
-		margin-left: 4%;
-		font-size: 22px;
+		margin-left: 3%;
+		font-size: 18px;
 	}
 	.questionTextRad{
 	color:black;
 	margin-left: 7%;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 23px;
+	font-size: 18px;
 	}
 	#inputQuesText {
 	color:black;
 	margin-left: 5%;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 21px;
+	font-size: 18px;
 	margin-right: 5%;
 
 }
 	#submitButt{
 		margin-left: 20%;
-
+		background-color:red;
 	}
+	.multRads{
+		margin-left: 33%;
+	}
+
 
 
 	
