--- a/Components/Pages/AttendancePage/AttendanceSessionsView/AttendanceSessionsView.css
+++ b/Components/Pages/AttendancePage/AttendanceSessionsView/AttendanceSessionsView.css
@@ -1,11 +1,15 @@
 .AttendancePage_AttendanceSessionViewCol1{
-	width: 40%;
+	width: 25%;
 }
 
 .AttendancePage_AttendanceSessionViewCol2{
-	width: 20%;
+	width: 40%;
 }
 
 .AttendancePage_AttendanceSessionViewCol3{
-	width: 40%;
+	width: 10%;
+}
+
+.AttendancePage_AttendanceSessionViewCol4{
+	width: 25%;
 }
