--- a/Components/MenuButtons/MenuButtons.css
+++ b/Components/MenuButtons/MenuButtons.css
@@ -3,9 +3,29 @@
 	pointer-events: none;
 	padding-left: -5%;
 
+
 }
 a{
 	color:black;
 	font-size: 20px;
+	margin-left: -14px;
 }
+
+
+@media screen and (max-width: 768px){
+	a{
+		font-size: 12px;
+	}
+
+}
+
+
+@media screen and (max-width: 640px){
+	a{font-size: 12px;
+	}
+}
+
+
+
+
 
