dropdown menu appears, but doesn't overflow div properly.

--- a/Components/Pages/AttendancePage/AttendanceEditForm/AttendanceEditForm.css
+++ b/Components/Pages/AttendancePage/AttendanceEditForm/AttendanceEditForm.css
@@ -1,7 +1,3 @@
-.AttendanceEditForm_hidden{
-	display: none
-}
-
-.AttendanceEditForm_show{
-	display: inline-block;
+.AttendanceEditForm_overflow{
+	overflow: auto;
 }
